--- a/WebApp/Views/AdminNewInfo/Tourist.cshtml
+++ b/WebApp/Views/AdminNewInfo/Tourist.cshtml
@@ -2,6 +2,7 @@
 @{
     Layout = null;
 }
+
 @using NewModel
 @using NewCommon
 <!DOCTYPE html>
@@ -26,9 +27,9 @@
 
             //删除
             function deleteInfo(id, control) {
-                $.messager.confirm("删除评论", "确定要删除该记录吗?", function (r) {
+                $.messager.confirm("删除用户", "确定要删除该用户吗?", function (r) {
                     if (r) {
-                        $.post("/AdminNewInfo/DeleteCommon", { "id": id }, function (data) {
+                        $.post("/AdminNewInfo/DeleteTourist", { "id": id }, function (data) {
                             if (data == "ok") {
                                 $.messager.alert("提示", "删除成功!", "info");
                                 $(control).parent().parent().remove();
@@ -55,16 +56,13 @@
                 </script>
             </div>
             <table style="width:100%" id="tabs">
-                <tr><th>标题</th><th>评论时间</th><th>作者</th><th>评论内容</th><th>评论者</th><th>删除</th></tr>
-                @foreach (CommentInfo commentInfo in (List<CommentInfo>)ViewData["pageList"])
+                <tr><th>用户名称</th><th>创建时间</th><th>删除</th></tr>
+                @foreach (UserInfo userinfo in (List<UserInfo>)ViewData["pageList"])
                 {
                     <tr>
-                        <td>@commentInfo.Title</td>
-                        <td>@commentInfo.CreateDateTime.ToString("yyyy年MM月dd日")</td>
-                        <td>@commentInfo.Author</td>
-                        <td>@commentInfo.Msg</td>
-                        <td>@commentInfo.UserName</td>
-                        <td><a href="#" class="easyui-linkbutton" ids="@commentInfo.Id" data-options="iconCls:'icon-remove'">删除</a></td>
+                        <td>@userinfo.UserName</td>
+                        <td>@userinfo.RegTime.ToString("yyyy年MM月dd日")</td>                 
+                        <td><a href="#" class="easyui-linkbutton" ids="@userinfo.Id" data-options="iconCls:'icon-remove'">删除</a></td>
                     </tr>
                 }
             </table>
@@ -75,7 +73,7 @@
         else
         {
             <span>暂无数据</span>
-        } 
+        }
     </div>
 </body>
 </html>
