--- a/WebApp/Views/AdminNewInfo/Index.cshtml
+++ b/WebApp/Views/AdminNewInfo/Index.cshtml
@@ -54,6 +54,7 @@
                 title: "新闻详细信息",
                 collapsible: true,
                 minimizable: true,
+                maximizable: true,
                 width: 700,
                 height: 400,
                 modal: true,
@@ -97,8 +98,9 @@
                 title: "发布新闻信息",
                 collapsible: true,
                 minimizable: true,
+                maximizable:true,
                 width: 700,
-                height: 400,
+                height: 500,
                 modal: true,
                 buttons: [{
                     text: '发布',
@@ -134,8 +136,9 @@
                 title: "编辑信息",
                 collapsible: true,
                 minimizable: true,
+                maximizable: true,
                 width: 700,
-                height: 400,
+                height: 500,
                 modal: true,
                 buttons: [{
                     text: '修改',
