--- a/WebApp/Views/NewList/Index.cshtml
+++ b/WebApp/Views/NewList/Index.cshtml
@@ -143,7 +143,7 @@
                 @*<dl class="menu_prd"></dl>*@
             </div>
             <div id="content_column">
-                <div class="position"><a class="graylink" href="http://localhost:51129/NewList/Index">首页</a>&nbsp;&lt;&nbsp;<span class="color0range">新闻中心</span></div>
+                <div class="position"><a class="graylink" href="/NewList/Index">首页</a>&nbsp;&lt;&nbsp;<span class="color0range">新闻中心</span></div>
                 <div class="cont">
                     <ul class="list_news">
                         @if (ViewData["newInfoList"] != null)
