--- a/WebApp/Views/NewList/ShowDetail.cshtml
+++ b/WebApp/Views/NewList/ShowDetail.cshtml
@@ -167,7 +167,7 @@
                     @*<dl class="menu_prd"></dl>*@
                 </div>
                 <div id="content_column">
-                    <div class="position"><a class="graylink" href="http://localhost:51129/NewList/Index">首页</a>&nbsp;&lt;&nbsp;<a class="graylink" href="http://localhost:51129/NewList/Index">新闻中心</a>&nbsp;&lt;&nbsp;<span class="color0range">新闻详情</span></div>
+                    <div class="position"><a class="graylink" href="/NewList/Index">首页</a>&nbsp;&lt;&nbsp;<a class="graylink" href="/NewList/Index">新闻中心</a>&nbsp;&lt;&nbsp;<span class="color0range">新闻详情</span></div>
                     <div class="cont">
                         <h1 class="title">@Model.Title</h1>
                         <p class="info">@Model.Author   @Model.SubDateTime.ToString("yyyy-MM-dd")</p>
